--- a/mainse1.html
+++ b/mainse1.html
@@ -11,13 +11,11 @@
    <h3 class='sectionHead' id='intro'><span class='titlemark'>0.1   </span> <a id='x2-10000.1'></a>Intro</h3>
 <!-- l. 17 --><p class='noindent'>
 </p>
-   <div class='subsectionTOCS'>
-   <span class='subsectionToc'>0.1.1 <a href='mainsu1.html#hello'>HELLO</a></span>
-   </div>
+   <h4 class='subsectionHead' id='hello'><span class='titlemark'>0.1.1   </span> <a id='x2-20000.1.1'></a>HELLO</h4>
                                                                   
 
                                                                   
    <!-- l. 19 --><div class='crosslinks'><p class='noindent'>[<a href='mainse2.html'>next</a>] [<a href='mainse1.html'>front</a>] [<a href='main.html#mainse1.html'>up</a>] </p></div>
-<!-- l. 19 --><p class='indent'>   <a id='tailmainse1.html'></a> </p> 
+<!-- l. 19 --><p class='indent'>   <a id='tailmainse1.html'></a>  </p> 
 </body> 
 </html>
