--- a/mainse2.html
+++ b/mainse2.html
@@ -8,16 +8,14 @@
 <meta content='main.tex' name='src' /> 
 </head><body>
    <!-- l. 19 --><div class='crosslinks'><p class='noindent'>[<a href='mainse1.html'>prev</a>] [<a href='mainse1.html#tailmainse1.html'>prev-tail</a>] [<a href='#tailmainse2.html'>tail</a>] [<a href='main.html#mainse2.html'>up</a>] </p></div>
-   <h3 class='sectionHead' id='content'><span class='titlemark'>0.2   </span> <a id='x4-30000.2'></a>Content</h3>
+   <h3 class='sectionHead' id='content'><span class='titlemark'>0.2   </span> <a id='x3-30000.2'></a>Content</h3>
 <!-- l. 20 --><p class='noindent'>
 </p>
-   <div class='subsectionTOCS'>
-   <span class='subsectionToc'>0.2.1 <a href='mainsu2.html#world'>World</a></span>
-   </div>
+   <h4 class='subsectionHead' id='world'><span class='titlemark'>0.2.1   </span> <a id='x3-40000.2.1'></a>World</h4>
                                                                   
 
                                                                   
    <!-- l. 22 --><div class='crosslinks'><p class='noindent'>[<a href='mainse1.html'>prev</a>] [<a href='mainse1.html#tailmainse1.html'>prev-tail</a>] [<a href='mainse2.html'>front</a>] [<a href='main.html#mainse2.html'>up</a>] </p></div>
-<!-- l. 22 --><p class='indent'>   <a id='tailmainse2.html'></a> </p> 
+<!-- l. 22 --><p class='indent'>   <a id='tailmainse2.html'></a>  </p> 
 </body> 
 </html>
