deploy: ba4401a0d80fb5d3546b2d6ee7936d7db539673f

--- a/main.html
+++ b/main.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html> 
 <html lang='en-US' xml:lang='en-US'> 
-<head><title>TeX4ht Test</title> 
+<head> <title>TeX4ht Test</title> 
 <meta charset='utf-8' /> 
 <meta content='TeX4ht (https://tug.org/tex4ht/)' name='generator' /> 
 <meta content='width=device-width,initial-scale=1' name='viewport' /> 
@@ -25,10 +25,12 @@
 
                                                                   
    </div>
-   <div class='tableofcontents'>
-   <span class='sectionToc'>0.1 <a href='mainse1.html#intro' id='QQ2-2-1'>Intro</a></span>
-<br />   <span class='sectionToc'>0.2 <a href='mainse2.html#content' id='QQ2-3-3'>Content</a></span>
-   </div>
- 
+   <nav class='TOC'>
+   <span class='sectionToc'>0.1 <a href='Intro.html#intro' id='QQ2-2-1'>Intro</a></span>
+   <span class='sectionToc'>0.2 <a href='Content.html#content' id='QQ2-3-3'>Content</a></span>
+   </nav> 
+<main class='main-content'> 
+
+</main> 
 </body> 
 </html>
