--- a/Content.html
+++ b/Content.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html> 
 <html lang='en-US' xml:lang='en-US'> 
-<head><title>Content</title> 
+<header> 
+<title>Content</title> 
 <meta charset='utf-8' /> 
 <meta content='TeX4ht (https://tug.org/tex4ht/)' name='generator' /> 
 <meta content='width=device-width,initial-scale=1' name='viewport' /> 
 <link href='main.css' rel='stylesheet' type='text/css' /> 
 <meta content='main.tex' name='src' /> 
 <link href='style.css' rel='stylesheet' type='text/css' /> 
-</head><body>
+</header> 
+<body>
    <nav class='TOC'>
    <span class='sectionToc'>0.1 <a href='Intro.html#intro'>Intro</a></span>
    
